third_party/move/move-compiler-v2/tests/checking/liveness/return_typing.exp

Diagnostics:
warning: A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon, potentially causing surprising type conflicts.
  ┌─ tests/checking/liveness/return_typing.move:7:19
  │
7 │         return(42);
  │                   ^

error: cannot return nothing from a function with result type `u8`
  ┌─ tests/checking/liveness/return_typing.move:7:19
  │
7 │         return(42);
  │                   ^

warning: A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon, potentially causing surprising type conflicts.
   ┌─ tests/checking/liveness/return_typing.move:11:18
   │
11 │         return 42;
   │                  ^

error: cannot return nothing from a function with result type `u8`
   ┌─ tests/checking/liveness/return_typing.move:11:18
   │
11 │         return 42;
   │                  ^
